--- a/scss/components/_sign-in.scss
+++ b/scss/components/_sign-in.scss
@@ -45,6 +45,17 @@
     display: flex;
     flex-direction: column;
     width: 450px;
+    margin-top: 3rem;
+
+    @include media-breakpoint-down(xs) {
+        width: 95%;
+        max-width: 450px;
+    }
+
+    label {
+        user-select: none;
+        cursor: pointer;
+    }
 
     .sign-in-form-title {
         font-weight: 600;
@@ -73,6 +84,14 @@
 
         .form-check-input {
             @include set-width-and-height(20px);
+            &:checked {
+                background-color: $primary-color;
+                border-color: $primary-color
+            }
+            &:focus {
+                border-color: $primary-color;
+                box-shadow: 0 0 0 .25rem rgba(5, 58, 101, 0.4);
+            }
         }
     }
 
